cmake_minimum_required(VERSION 3.6)
project(serafini_starter)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Ngrams/lib/StanfordCPPLib/private/foreachpatch.h
        Ngrams/lib/StanfordCPPLib/private/main.h
        Ngrams/lib/StanfordCPPLib/private/randompatch.h
        Ngrams/lib/StanfordCPPLib/private/tokenpatch.h
        Ngrams/lib/StanfordCPPLib/private/tplatform.h
        Ngrams/lib/StanfordCPPLib/private/version.h
        Ngrams/lib/StanfordCPPLib/stacktrace/call_stack.h
        Ngrams/lib/StanfordCPPLib/stacktrace/call_stack_gcc.cpp
        Ngrams/lib/StanfordCPPLib/stacktrace/call_stack_windows.cpp
        Ngrams/lib/StanfordCPPLib/stacktrace/stack_exception.h
        Ngrams/lib/StanfordCPPLib/base64.cpp
        Ngrams/lib/StanfordCPPLib/base64.h
        Ngrams/lib/StanfordCPPLib/basicgraph.cpp
        Ngrams/lib/StanfordCPPLib/basicgraph.h
        Ngrams/lib/StanfordCPPLib/bitstream.cpp
        Ngrams/lib/StanfordCPPLib/bitstream.h
        Ngrams/lib/StanfordCPPLib/compare.h
        Ngrams/lib/StanfordCPPLib/console.cpp
        Ngrams/lib/StanfordCPPLib/console.h
        Ngrams/lib/StanfordCPPLib/dawglexicon.cpp
        Ngrams/lib/StanfordCPPLib/dawglexicon.h
        Ngrams/lib/StanfordCPPLib/deque.h
        Ngrams/lib/StanfordCPPLib/direction.cpp
        Ngrams/lib/StanfordCPPLib/direction.h
        Ngrams/lib/StanfordCPPLib/error.cpp
        Ngrams/lib/StanfordCPPLib/error.h
        Ngrams/lib/StanfordCPPLib/exceptions.cpp
        Ngrams/lib/StanfordCPPLib/exceptions.h
        Ngrams/lib/StanfordCPPLib/filelib.cpp
        Ngrams/lib/StanfordCPPLib/filelib.h
        Ngrams/lib/StanfordCPPLib/foreach.h
        Ngrams/lib/StanfordCPPLib/gbufferedimage.cpp
        Ngrams/lib/StanfordCPPLib/gbufferedimage.h
        Ngrams/lib/StanfordCPPLib/gevents.cpp
        Ngrams/lib/StanfordCPPLib/gevents.h
        Ngrams/lib/StanfordCPPLib/gfilechooser.cpp
        Ngrams/lib/StanfordCPPLib/gfilechooser.h
        Ngrams/lib/StanfordCPPLib/ginteractors.cpp
        Ngrams/lib/StanfordCPPLib/ginteractors.h
        Ngrams/lib/StanfordCPPLib/gmath.cpp
        Ngrams/lib/StanfordCPPLib/gmath.h
        Ngrams/lib/StanfordCPPLib/gobjects.cpp
        Ngrams/lib/StanfordCPPLib/gobjects.h
        Ngrams/lib/StanfordCPPLib/goptionpane.cpp
        Ngrams/lib/StanfordCPPLib/goptionpane.h
        Ngrams/lib/StanfordCPPLib/graph.h
        Ngrams/lib/StanfordCPPLib/grid.h
        Ngrams/lib/StanfordCPPLib/gtable.cpp
        Ngrams/lib/StanfordCPPLib/gtable.h
        Ngrams/lib/StanfordCPPLib/gtimer.cpp
        Ngrams/lib/StanfordCPPLib/gtimer.h
        Ngrams/lib/StanfordCPPLib/gtypes.cpp
        Ngrams/lib/StanfordCPPLib/gtypes.h
        Ngrams/lib/StanfordCPPLib/gwindow.cpp
        Ngrams/lib/StanfordCPPLib/gwindow.h
        Ngrams/lib/StanfordCPPLib/hashcode.cpp
        Ngrams/lib/StanfordCPPLib/hashcode.h
        Ngrams/lib/StanfordCPPLib/hashmap.h
        Ngrams/lib/StanfordCPPLib/hashset.h
        Ngrams/lib/StanfordCPPLib/lexicon.cpp
        Ngrams/lib/StanfordCPPLib/lexicon.h
        Ngrams/lib/StanfordCPPLib/linkedhashmap.h
        Ngrams/lib/StanfordCPPLib/linkedhashset.h
        Ngrams/lib/StanfordCPPLib/linkedlist.h
        Ngrams/lib/StanfordCPPLib/main.cpp
        Ngrams/lib/StanfordCPPLib/map.h
        Ngrams/lib/StanfordCPPLib/observable.cpp
        Ngrams/lib/StanfordCPPLib/observable.h
        Ngrams/lib/StanfordCPPLib/plainconsole.cpp
        Ngrams/lib/StanfordCPPLib/plainconsole.h
        Ngrams/lib/StanfordCPPLib/platform.cpp
        Ngrams/lib/StanfordCPPLib/platform.h
        Ngrams/lib/StanfordCPPLib/point.cpp
        Ngrams/lib/StanfordCPPLib/point.h
        Ngrams/lib/StanfordCPPLib/pqueue.h
        Ngrams/lib/StanfordCPPLib/queue.h
        Ngrams/lib/StanfordCPPLib/random.cpp
        Ngrams/lib/StanfordCPPLib/random.h
        Ngrams/lib/StanfordCPPLib/regexpr.cpp
        Ngrams/lib/StanfordCPPLib/regexpr.h
        Ngrams/lib/StanfordCPPLib/server.cpp
        Ngrams/lib/StanfordCPPLib/server.h
        Ngrams/lib/StanfordCPPLib/set.h
        Ngrams/lib/StanfordCPPLib/shuffle.cpp
        Ngrams/lib/StanfordCPPLib/shuffle.h
        Ngrams/lib/StanfordCPPLib/simpio.cpp
        Ngrams/lib/StanfordCPPLib/simpio.h
        Ngrams/lib/StanfordCPPLib/sound.cpp
        Ngrams/lib/StanfordCPPLib/sound.h
        Ngrams/lib/StanfordCPPLib/sparsegrid.h
        Ngrams/lib/StanfordCPPLib/stack.h
        Ngrams/lib/StanfordCPPLib/startup.cpp
        Ngrams/lib/StanfordCPPLib/strlib.cpp
        Ngrams/lib/StanfordCPPLib/strlib.h
        Ngrams/lib/StanfordCPPLib/timer.cpp
        Ngrams/lib/StanfordCPPLib/timer.h
        Ngrams/lib/StanfordCPPLib/tokenscanner.cpp
        Ngrams/lib/StanfordCPPLib/tokenscanner.h
        Ngrams/lib/StanfordCPPLib/urlstream.cpp
        Ngrams/lib/StanfordCPPLib/urlstream.h
        Ngrams/lib/StanfordCPPLib/vector.h
        Ngrams/lib/StanfordCPPLib/version.cpp
        Ngrams/src/ngrams.cpp
        WordLadder/lib/StanfordCPPLib/private/foreachpatch.h
        WordLadder/lib/StanfordCPPLib/private/main.h
        WordLadder/lib/StanfordCPPLib/private/randompatch.h
        WordLadder/lib/StanfordCPPLib/private/tokenpatch.h
        WordLadder/lib/StanfordCPPLib/private/tplatform.h
        WordLadder/lib/StanfordCPPLib/private/version.h
        WordLadder/lib/StanfordCPPLib/stacktrace/call_stack.h
        WordLadder/lib/StanfordCPPLib/stacktrace/call_stack_gcc.cpp
        WordLadder/lib/StanfordCPPLib/stacktrace/call_stack_windows.cpp
        WordLadder/lib/StanfordCPPLib/stacktrace/stack_exception.h
        WordLadder/lib/StanfordCPPLib/base64.cpp
        WordLadder/lib/StanfordCPPLib/base64.h
        WordLadder/lib/StanfordCPPLib/basicgraph.cpp
        WordLadder/lib/StanfordCPPLib/basicgraph.h
        WordLadder/lib/StanfordCPPLib/bitstream.cpp
        WordLadder/lib/StanfordCPPLib/bitstream.h
        WordLadder/lib/StanfordCPPLib/compare.h
        WordLadder/lib/StanfordCPPLib/console.cpp
        WordLadder/lib/StanfordCPPLib/console.h
        WordLadder/lib/StanfordCPPLib/dawglexicon.cpp
        WordLadder/lib/StanfordCPPLib/dawglexicon.h
        WordLadder/lib/StanfordCPPLib/deque.h
        WordLadder/lib/StanfordCPPLib/direction.cpp
        WordLadder/lib/StanfordCPPLib/direction.h
        WordLadder/lib/StanfordCPPLib/error.cpp
        WordLadder/lib/StanfordCPPLib/error.h
        WordLadder/lib/StanfordCPPLib/exceptions.cpp
        WordLadder/lib/StanfordCPPLib/exceptions.h
        WordLadder/lib/StanfordCPPLib/filelib.cpp
        WordLadder/lib/StanfordCPPLib/filelib.h
        WordLadder/lib/StanfordCPPLib/foreach.h
        WordLadder/lib/StanfordCPPLib/gbufferedimage.cpp
        WordLadder/lib/StanfordCPPLib/gbufferedimage.h
        WordLadder/lib/StanfordCPPLib/gevents.cpp
        WordLadder/lib/StanfordCPPLib/gevents.h
        WordLadder/lib/StanfordCPPLib/gfilechooser.cpp
        WordLadder/lib/StanfordCPPLib/gfilechooser.h
        WordLadder/lib/StanfordCPPLib/ginteractors.cpp
        WordLadder/lib/StanfordCPPLib/ginteractors.h
        WordLadder/lib/StanfordCPPLib/gmath.cpp
        WordLadder/lib/StanfordCPPLib/gmath.h
        WordLadder/lib/StanfordCPPLib/gobjects.cpp
        WordLadder/lib/StanfordCPPLib/gobjects.h
        WordLadder/lib/StanfordCPPLib/goptionpane.cpp
        WordLadder/lib/StanfordCPPLib/goptionpane.h
        WordLadder/lib/StanfordCPPLib/graph.h
        WordLadder/lib/StanfordCPPLib/grid.h
        WordLadder/lib/StanfordCPPLib/gtable.cpp
        WordLadder/lib/StanfordCPPLib/gtable.h
        WordLadder/lib/StanfordCPPLib/gtimer.cpp
        WordLadder/lib/StanfordCPPLib/gtimer.h
        WordLadder/lib/StanfordCPPLib/gtypes.cpp
        WordLadder/lib/StanfordCPPLib/gtypes.h
        WordLadder/lib/StanfordCPPLib/gwindow.cpp
        WordLadder/lib/StanfordCPPLib/gwindow.h
        WordLadder/lib/StanfordCPPLib/hashcode.cpp
        WordLadder/lib/StanfordCPPLib/hashcode.h
        WordLadder/lib/StanfordCPPLib/hashmap.h
        WordLadder/lib/StanfordCPPLib/hashset.h
        WordLadder/lib/StanfordCPPLib/lexicon.cpp
        WordLadder/lib/StanfordCPPLib/lexicon.h
        WordLadder/lib/StanfordCPPLib/linkedhashmap.h
        WordLadder/lib/StanfordCPPLib/linkedhashset.h
        WordLadder/lib/StanfordCPPLib/linkedlist.h
        WordLadder/lib/StanfordCPPLib/main.cpp
        WordLadder/lib/StanfordCPPLib/map.h
        WordLadder/lib/StanfordCPPLib/observable.cpp
        WordLadder/lib/StanfordCPPLib/observable.h
        WordLadder/lib/StanfordCPPLib/plainconsole.cpp
        WordLadder/lib/StanfordCPPLib/plainconsole.h
        WordLadder/lib/StanfordCPPLib/platform.cpp
        WordLadder/lib/StanfordCPPLib/platform.h
        WordLadder/lib/StanfordCPPLib/point.cpp
        WordLadder/lib/StanfordCPPLib/point.h
        WordLadder/lib/StanfordCPPLib/pqueue.h
        WordLadder/lib/StanfordCPPLib/queue.h
        WordLadder/lib/StanfordCPPLib/random.cpp
        WordLadder/lib/StanfordCPPLib/random.h
        WordLadder/lib/StanfordCPPLib/regexpr.cpp
        WordLadder/lib/StanfordCPPLib/regexpr.h
        WordLadder/lib/StanfordCPPLib/server.cpp
        WordLadder/lib/StanfordCPPLib/server.h
        WordLadder/lib/StanfordCPPLib/set.h
        WordLadder/lib/StanfordCPPLib/shuffle.cpp
        WordLadder/lib/StanfordCPPLib/shuffle.h
        WordLadder/lib/StanfordCPPLib/simpio.cpp
        WordLadder/lib/StanfordCPPLib/simpio.h
        WordLadder/lib/StanfordCPPLib/sound.cpp
        WordLadder/lib/StanfordCPPLib/sound.h
        WordLadder/lib/StanfordCPPLib/sparsegrid.h
        WordLadder/lib/StanfordCPPLib/stack.h
        WordLadder/lib/StanfordCPPLib/startup.cpp
        WordLadder/lib/StanfordCPPLib/strlib.cpp
        WordLadder/lib/StanfordCPPLib/strlib.h
        WordLadder/lib/StanfordCPPLib/timer.cpp
        WordLadder/lib/StanfordCPPLib/timer.h
        WordLadder/lib/StanfordCPPLib/tokenscanner.cpp
        WordLadder/lib/StanfordCPPLib/tokenscanner.h
        WordLadder/lib/StanfordCPPLib/urlstream.cpp
        WordLadder/lib/StanfordCPPLib/urlstream.h
        WordLadder/lib/StanfordCPPLib/vector.h
        WordLadder/lib/StanfordCPPLib/version.cpp
        WordLadder/src/wordladder.cpp)

add_executable(serafini_starter ${SOURCE_FILES})